--- a/app/views/hh_forms/new.html.haml
+++ b/app/views/hh_forms/new.html.haml
@@ -72,124 +72,122 @@
 
 		-# check boxes
 		.row
-			.col_one_fifth.testimonial.test-wider
-				%h4 Respiratory
-				= f.check_box :chronic_cough
-				= f.label :chronic_cough, "chronic_cough"
-				%br
-				= f.check_box :shortness_of_breath
-				= f.label :shortness_of_breath, "shortness_of_breath"
-				%br
-				= f.check_box :bronchitis
-				= f.label :bronchitis, "bronchitis"
-				%br
-				= f.check_box :asthma
-				= f.label :asthma, "asthma"
-				%br
-				= f.check_box :emphysema
-				= f.label :emphysema, "emphysema"
-				%br
-				%h4.topmargin-sm Skin
-				= f.check_box :skin_condition
-				= f.label :skin_condition, "skin_condition"
-			.col_one_fifth.testimonial.test-wider
-				%h4 Cardiovascular
-				= f.check_box :high_bp
-				= f.label :high_bp, "high_bp"
-				%br
-				= f.check_box :low_bp
-				= f.label :low_bp, "low_bp"
-				%br
-				= f.check_box :cchf
-				= f.label :cchf, "cchf"
-				%br
-				= f.check_box :heat_attack
-				= f.label :heat_attack, "heat_attack"
-				%br
-				= f.check_box :phlebitis
-				= f.label :phlebitis, "phlebitis"
-				%br
-				= f.check_box :stroke_CVA
-				= f.label :stroke_CVA, "stroke_CVA"
-				%br
-				= f.check_box :pacemaker
-				= f.label :pacemaker, "pacemaker"
-				%br
-				= f.check_box :heart_disease
-				= f.label :heart_disease, "heart_disease"
-				%br
-			.col_one_fifth.testimonial.test-wider
-				%h4 Other Conditions
-				= f.check_box :loss_of_sensation
-				= f.label :loss_of_sensation, "loss_of_sensation"
-				%br
-				= f.check_box :diabetes
-				= f.label :diabetes, "diabetes"
-				%br
-				= f.check_box :diabetes_onset
-				= f.label :diabetes_onset, "diabetes_onset"
-				%br
-				= f.check_box :allergies
-				= f.label :allergies, "allergies"
-				%br
-				= f.check_box :epilepsy
-				= f.label :epilepsy, "epilepsy"
-				%br
-				= f.check_box :cancer
-				= f.label :cancer, "cancer"
-				%br
-				= f.check_box :arthritis
-				= f.label :arthritis, "arthritis"
-				%br
-				= f.check_box :digestive_conditions
-				= f.label :digestive_conditions, "digestive_conditions"
-				%br
-				= f.check_box :osteoporosis
-				= f.label :osteoporosis, "osteoporosis"
-				%br
-			
-
-
-		.row
-			.col_one_fifth.testimonial
-				%h4 HeaNeck
-				= f.check_box :vision_problems
-				= f.label :vision_problems, "vision_problems"
-				%br
-				= f.check_box :vision_loss
-				= f.label :vision_loss, "vision_loss"
-				%br
-				= f.check_box :ear_problems
-				= f.label :ear_problems, "ear_problems"
-				%br
-				= f.check_box :hearing_loss
-				= f.label :hearing_loss, "hearing_loss"
-				%br	    	
-			.col_one_fifth.testimonial
-				%h4 Infections
-				= f.check_box :hepatitis
-				= f.label :hepatitis, "hepatitis"
-				%br
-				= f.check_box :infectious_skin_condition
-				= f.label :infectious_skin_condition, "infectious_skin_condition"
-				%br
-				= f.check_box :tb
-				= f.label :tb, "tb"
-				%br
-				= f.check_box :hiv
-				= f.label :hiv, "hiv"
-				%br	    	
-			.col_one_fifth.testimonial
-				%h4 Women
-				= f.check_box :pregnant
-				= f.label :pregnant, "pregnant"
-				%br
-				= f.label :pregnant_due_date, "Due Date"
-				%br
-				= f.date_select :pregnant_due_date, :start_year => 2016, :class => "form-control"
+			.col_one_third
+				.testimonial
+					%h4 Respiratory
+					= f.check_box :chronic_cough
+					= f.label :chronic_cough, "chronic_cough"
+					%br
+					= f.check_box :shortness_of_breath
+					= f.label :shortness_of_breath, "shortness_of_breath"
+					%br
+					= f.check_box :bronchitis
+					= f.label :bronchitis, "bronchitis"
+					%br
+					= f.check_box :asthma
+					= f.label :asthma, "asthma"
+					%br
+					= f.check_box :emphysema
+					= f.label :emphysema, "emphysema"
+				.testimonial
+					%h4 Infections
+					= f.check_box :hepatitis
+					= f.label :hepatitis, "hepatitis"
+					%br
+					= f.check_box :infectious_skin_condition
+					= f.label :infectious_skin_condition, "infectious_skin_condition"
+					%br
+					= f.check_box :tb
+					= f.label :tb, "tb"
+					%br
+					= f.check_box :hiv
+					= f.label :hiv, "hiv"
+				.testimonial	
+					%h4 Other Conditions
+					= f.check_box :loss_of_sensation
+					= f.label :loss_of_sensation, "loss_of_sensation"
+					%br
+					= f.check_box :diabetes
+					= f.label :diabetes, "diabetes"
+					%br
+					= f.check_box :diabetes_onset
+					= f.label :diabetes_onset, "diabetes_onset"
+					%br
+					= f.check_box :allergies
+					= f.label :allergies, "allergies"
+					%br
+					= f.check_box :epilepsy
+					= f.label :epilepsy, "epilepsy"
+					%br
+					= f.check_box :cancer
+					= f.label :cancer, "cancer"
+					%br
+					= f.check_box :arthritis
+					= f.label :arthritis, "arthritis"
+					%br
+					= f.check_box :digestive_conditions
+					= f.label :digestive_conditions, "digestive_conditions"
+					%br
+					= f.check_box :osteoporosis
+					= f.label :osteoporosis, "osteoporosis"
+					%br
+			.col_one_third.col_last
+				.testimonial
+					%h4 Cardiovascular
+					= f.check_box :high_bp
+					= f.label :high_bp, "high_bp"
+					%br
+					= f.check_box :low_bp
+					= f.label :low_bp, "low_bp"
+					%br
+					= f.check_box :cchf
+					= f.label :cchf, "cchf"
+					%br
+					= f.check_box :heat_attack
+					= f.label :heat_attack, "heat_attack"
+					%br
+					= f.check_box :phlebitis
+					= f.label :phlebitis, "phlebitis"
+					%br
+					= f.check_box :stroke_CVA
+					= f.label :stroke_CVA, "stroke_CVA"
+					%br
+					= f.check_box :pacemaker
+					= f.label :pacemaker, "pacemaker"
+					%br
+					= f.check_box :heart_disease
+					= f.label :heart_disease, "heart_disease"
+					%br
+				.testimonial
+					%h4 HeaNeck
+					= f.check_box :vision_problems
+					= f.label :vision_problems, "vision_problems"
+					%br
+					= f.check_box :vision_loss
+					= f.label :vision_loss, "vision_loss"
+					%br
+					= f.check_box :ear_problems
+					= f.label :ear_problems, "ear_problems"
+					%br
+					= f.check_box :hearing_loss
+					= f.label :hearing_loss, "hearing_loss"
+					%br
+				.testimonial
+					%h4 Skin
+					= f.check_box :skin_condition
+					= f.label :skin_condition, "skin_condition"					
+				.testimonial
+					%h4 Women
+					= f.check_box :pregnant
+					= f.label :pregnant, "pregnant"
+					%br
+					= f.label :pregnant_due_date, "Due Date"
+					%br
+					= f.date_select :pregnant_due_date, :start_year => 2016, :class => "form-control"
+		
 		-# Head Neck and shoulders
 		.row
-			.col_one_fifth.testimonial
+			.col_one_third.testimonial
 				= f.check_box :neck
 				= f.label :neck, "neck"
 				= f.text_area :neck_note, :class => "form-control", placeholder: "More Details about neck"
@@ -201,7 +199,6 @@
 				= f.check_box :mid_back
 				= f.label :mid_back, "mid_back"		
 				= f.text_area :mid_back_note, :class => "form-control", placeholder: "More Details about mid back"
-			.col_one_fifth.testimonial 	 
 				= f.check_box :upper_back
 				= f.label :upper_back, "upper_back"
 				= f.text_area :upper_back_note, :class => "form-control", placeholder: "More Details about upper back"
@@ -210,10 +207,11 @@
 				= f.label :shoulders, "shoulders"
 				= f.text_area :shoulders_note, :class => "form-control", placeholder: "More Details about shoulders"
 
+			.col_one_third.testimonial 	 
 				= f.check_box :arms
 				= f.label :arms, "arms"
 				= f.text_area :arms_note, :class => "form-control", placeholder: "More Details about arms"
-			.col_one_fifth.testimonial
+
 				= f.check_box :legs
 				= f.label :legs, "legs"
 				= f.text_area :legs_note, :class => "form-control", placeholder: "More Details about legs"
