--- a/app/views/hh_forms/new.html.haml
+++ b/app/views/hh_forms/new.html.haml
@@ -1,85 +1,93 @@
 .container
 	= form_for @hhform do |f|
+		.row
+			.col_two_third.testimonial
+				%h3 Health History Form
+				%strong For your information:
+				%p An accurate health history is important to ensure that it is safe for you to receive a massage treatment. If your health status changes in the future, please let me know. All information gathered for this treatment is confidential except as required or allowed by law or except to facilitate diagnosis (assessment) or treatment. You will be asked to provide written authorization for release of any information.
+
+
 		-# name
 		.row
 			.col_one_third.testimonial
-				= f.label :first_name, "first_name"
+				= f.label :first_name, "First Name"
 				= f.text_field :first_name, :class => "form-control"
-			.col_one_third.testimonial
-				= f.label :last_name, "last_name"
+				%br
+				= f.label :last_name, "Last Name"
 				= f.text_field :last_name, :class => "form-control"
-		.row
-			-# address
-			.col_one_third.testimonial
-				= f.label :address_1, "address_1"
+				%br
+				= f.label :address_1, "Address 1"
 				= f.text_field :address_1, :class => "form-control"
-
-				= f.label :address_2, "address_2"
+				%br
+				= f.label :address_2, "Address 2"
 				= f.text_field :address_2, :class => "form-control"
-
-				= f.label :city, "city"
+				%br
+				= f.label :city, "City"
 				= f.text_field :city, :class => "form-control"
-
-				= f.label :provance, "provance"
+				%br
+				= f.label :provance, "Provance"
 				= f.text_field :provance, :class => "form-control"
-
-				= f.label :postal_code, "postal_code"
+				%br
+				= f.label :postal_code, "Postal Code"
 				= f.text_field :postal_code, :class => "form-control"
-			-# contact
 			.col_one_third.testimonial
-				= f.label :email , "email"
+				= f.label :email, "Email"
 				= f.text_field :email , :class => "form-control"
-
-				= f.label :phone , "phone"
+				%br
+				= f.label :phone, "Phone"
 				= f.text_field :phone, :class => "form-control"
-
-				= f.label :occupation, "occupation"
+				%br
+				= f.label :occupation, "Occupation"
 				= f.text_field :occupation, :class => "form-control"
-
-				= f.label :referral_source, "referral_source"
+				%br
+				= f.label :referral_source, "Who Reffered You?"
 				= f.text_field :referral_source, :class => "form-control"
-				%br
-				= f.label :date_of_birth, "date_of_birth "
-				= f.date_select :date_of_birth, :start_year => 1925, :class => "form-control"
-
-		.row
-			-# complaints and massage history
-			.col_one_third.testimonial
-				= f.label :primary_complaint, "primary_complaint"
-				= f.text_field :primary_complaint, :class => "form-control"
-
-				= f.label :secondary_complaint, "secondary_complaint"
-				= f.text_field :secondary_complaint, :class => "form-control"
-
-				= f.label :previous_massage_therapy, "previous_massage_therapy"
-				= f.text_field :previous_massage_therapy, :class => "form-control"
-
-				= f.label :previous_massage_note, "previous_massage_note"
-				= f.text_area :previous_massage_note, :class => "form-control", :rows => "3", :placeholder => "Tell me about previous therapys"
-			-# general health
-			.col_one_third.testimonial
-				= f.label :sports, "sports"
-				= f.text_area :sports, :class => "form-control", :rows => "3"
-				%br
-				= f.check_box :smoke
-				= f.label :smoke, "Do you smoke?"
 				%br
 				= f.label :physician, "Physicians Name"
 				= text_field :hhform, :physician, :class => "form-control"
 				%br
 				= f.label :physician_address, "Physician Address"
 				= text_field :hhform, :physician_address, :class => "form-control", :class => "form-control"				
+				%br				
+				= f.label :date_of_birth, "Date of Birth"
+				%br
+				= f.date_select :date_of_birth, :start_year => 1925, :html_options => {:class => "form-control"}
+		
+		.row
+			-# complaints and massage history
+			.col_one_third.testimonial
+				= f.label :primary_complaint, "Primary Complaint", class: 'nobottommargin'
+				%p.nobottommargin (Reason for seeking massage as a treatment)
+				= f.text_field :primary_complaint, :class => "form-control"
 
+				= f.label :secondary_complaint, "Secondary Complaint"
+				= f.text_field :secondary_complaint, :class => "form-control"
+
+				= f.label :sports, "Sports", class: 'nobottommargin'
+				%p.nobottommargin (What physical activities are you involved in?)			
+				= f.text_area :sports, :class => "form-control", :rows => "3"
+				%br
+			-# general health
+			.col_one_third.testimonial
+				= f.label :previous_massage_note, "Previous Massage Treatments", class: 'nobottommargin'
+				%p.nobottommargin (Discribe previous massage treatments, if any)
+				= f.text_area :previous_massage_note, :class => "form-control", :rows => "3"
+				%br
+				= f.check_box :smoke
+				= f.label :smoke, "Do you smoke?"
 		-# check boxes
+		.row
+			.col_two_third.testimonial
+				%h4.nobottommargin Please indicate conditions you are or have experienced:
 		.row
 			.col_one_third
 				.testimonial
 					%h4 Respiratory
 					= f.check_box :chronic_cough
-					= f.label :chronic_cough, "chronic_cough"
+					= f.label :chronic_cough, "chronic cough"
 					%br
 					= f.check_box :shortness_of_breath
-					= f.label :shortness_of_breath, "shortness_of_breath"
+					= f.label :shortness_of_breath, "shortness of breath"
 					%br
 					= f.check_box :bronchitis
 					= f.label :bronchitis, "bronchitis"
@@ -95,7 +103,7 @@
 					= f.label :hepatitis, "hepatitis"
 					%br
 					= f.check_box :infectious_skin_condition
-					= f.label :infectious_skin_condition, "infectious_skin_condition"
+					= f.label :infectious_skin_condition, "infectious skin condition"
 					%br
 					= f.check_box :tb
 					= f.label :tb, "tb"
@@ -105,13 +113,13 @@
 				.testimonial	
 					%h4 Other Conditions
 					= f.check_box :loss_of_sensation
-					= f.label :loss_of_sensation, "loss_of_sensation"
+					= f.label :loss_of_sensation, "loss of sensation"
 					%br
 					= f.check_box :diabetes
 					= f.label :diabetes, "diabetes"
 					%br
 					= f.check_box :diabetes_onset
-					= f.label :diabetes_onset, "diabetes_onset"
+					= f.label :diabetes_onset, "diabetes onset"
 					%br
 					= f.check_box :allergies
 					= f.label :allergies, "allergies"
@@ -126,7 +134,7 @@
 					= f.label :arthritis, "arthritis"
 					%br
 					= f.check_box :digestive_conditions
-					= f.label :digestive_conditions, "digestive_conditions"
+					= f.label :digestive_conditions, "digestive conditions"
 					%br
 					= f.check_box :osteoporosis
 					= f.label :osteoporosis, "osteoporosis"
@@ -135,47 +143,47 @@
 				.testimonial
 					%h4 Cardiovascular
 					= f.check_box :high_bp
-					= f.label :high_bp, "high_bp"
+					= f.label :high_bp, "high blood pressure"
 					%br
 					= f.check_box :low_bp
-					= f.label :low_bp, "low_bp"
+					= f.label :low_bp, "low blood pressure"
 					%br
 					= f.check_box :cchf
 					= f.label :cchf, "cchf"
 					%br
 					= f.check_box :heat_attack
-					= f.label :heat_attack, "heat_attack"
+					= f.label :heat_attack, "heat attack"
 					%br
 					= f.check_box :phlebitis
 					= f.label :phlebitis, "phlebitis"
 					%br
 					= f.check_box :stroke_CVA
-					= f.label :stroke_CVA, "stroke_CVA"
+					= f.label :stroke_CVA, "stroke CVA"
 					%br
 					= f.check_box :pacemaker
 					= f.label :pacemaker, "pacemaker"
 					%br
 					= f.check_box :heart_disease
-					= f.label :heart_disease, "heart_disease"
+					= f.label :heart_disease, "heart disease"
 					%br
 				.testimonial
-					%h4 HeaNeck
+					%h4 Head and Neck
 					= f.check_box :vision_problems
-					= f.label :vision_problems, "vision_problems"
+					= f.label :vision_problems, "vision problems"
 					%br
 					= f.check_box :vision_loss
-					= f.label :vision_loss, "vision_loss"
+					= f.label :vision_loss, "vision loss"
 					%br
 					= f.check_box :ear_problems
-					= f.label :ear_problems, "ear_problems"
+					= f.label :ear_problems, "ear problems"
 					%br
 					= f.check_box :hearing_loss
-					= f.label :hearing_loss, "hearing_loss"
+					= f.label :hearing_loss, "hearing loss"
 					%br
 				.testimonial
-					%h4 Skin
+					%h4.nobottommargin Skin
 					= f.check_box :skin_condition
-					= f.label :skin_condition, "skin_condition"					
+					= f.label :skin_condition, "skin condition"					
 				.testimonial
 					%h4 Women
 					= f.check_box :pregnant
@@ -184,74 +192,83 @@
 					= f.label :pregnant_due_date, "Due Date"
 					%br
 					= f.date_select :pregnant_due_date, :start_year => 2016, :class => "form-control"
-		
+		.row
+			.col_two_third.testimonial
+				%h4.nobottommargin Describe any pains or discomforts you are currently experiencing:
 		-# Head Neck and shoulders
 		.row
 			.col_one_third.testimonial
 				= f.check_box :neck
 				= f.label :neck, "neck"
-				= f.text_area :neck_note, :class => "form-control", placeholder: "More Details about neck"
+				= f.text_area :neck_note, :class => "form-control"
 
 				= f.check_box :low_back
 				= f.label :low_back, "low_back"	
-				= f.text_area :low_back_note, :class => "form-control", placeholder: "More Details about low back"
+				= f.text_area :low_back_note, :class => "form-control"
 
 				= f.check_box :mid_back
 				= f.label :mid_back, "mid_back"		
-				= f.text_area :mid_back_note, :class => "form-control", placeholder: "More Details about mid back"
+				= f.text_area :mid_back_note, :class => "form-control"
 				= f.check_box :upper_back
 				= f.label :upper_back, "upper_back"
-				= f.text_area :upper_back_note, :class => "form-control", placeholder: "More Details about upper back"
+				= f.text_area :upper_back_note, :class => "form-control"
 
 				= f.check_box :shoulders
 				= f.label :shoulders, "shoulders"
-				= f.text_area :shoulders_note, :class => "form-control", placeholder: "More Details about shoulders"
+				= f.text_area :shoulders_note, :class => "form-control"
 
 			.col_one_third.testimonial 	 
 				= f.check_box :arms
 				= f.label :arms, "arms"
-				= f.text_area :arms_note, :class => "form-control", placeholder: "More Details about arms"
+				= f.text_area :arms_note, :class => "form-control"
 
 				= f.check_box :legs
 				= f.label :legs, "legs"
-				= f.text_area :legs_note, :class => "form-control", placeholder: "More Details about legs"
+				= f.text_area :legs_note, :class => "form-control"
 
 				= f.check_box :knees
 				= f.label :knees, "knees"
-				= f.text_area :knees_note, :class => "form-control", placeholder: "More Details about knees"
+				= f.text_area :knees_note, :class => "form-control"
 
 				= f.check_box :other
 				= f.label :other, "other"
-				= f.text_area :other_note, :class => "form-control", placeholder: "More Details about other"
-
+				= f.text_area :other_note, :class => "form-control"
 
 
 
 		.row
+			.col_two_third.testimonial
+				%h4 Please fill out any other relevant health information you can:
+		.row
 			.col_one_third.testimonial
-				= f.label :current_medications, "Current Medications"
-				= f.text_area :current_medications, :class => "form-control", :placeholder => "List current medications and what they treat"
+				= f.label :current_medications, "Current Medications", class: 'nobottommargin'
+				%p.nobottommargin (List any medications you are currently taking and what they are used for)
+				= f.text_area :current_medications, :class => "form-control"
 				%br
-				= f.label :surgery, "Surgeries"
-				= f.text_area :surgery, :class => "form-control", :placeholder => "Discribe any past surgeries and when they were preformed."
+				= f.label :surgery, "Surgeries", class: 'nobottommargin'
+				%p.nobottommargin (Discribe any relevant surgies including dates)
+				= f.text_area :surgery, :class => "form-control"
 				%br
-				= f.label :injuries, "Injuries"
-				= f.text_area :injuries, :class => "form-control", :placeholder => "Discribe any relevant injuries and when they happened"
-				%br
-
-				= f.label :general_health_status, "general_health_status"
+				= f.label :general_health_status, "General Health Status"
 				= f.text_field :general_health_status, :class => "form-control"
+				%br
+				= f.label :other_healthcare_list, "Other Healthcare", class: 'nobottommargin'
+				%p.nobottommargin (Discribe healthcare you are curently involved in or have tried in the past, e.g. Chiropratic, Physiotherapy, Accupuncture...)
+				= f.text_area :other_healthcare_list, :class => "form-control"
 			.col_one_third.testimonial
-				= f.label :other_healthcare_list, "Other Healthcare List"
-				= f.text_area :other_healthcare_list, :class => "form-control", :placeholder => "Discribe other healthcare services you are currently involved in."
-				%br
-				= f.label :other_medical_conditions, "Other Medical Conditions"
-				= f.text_area :other_medical_conditions, :class => "form-control", :placeholder => "List any other medical conditions you have."
-				%br
-				= f.label :special_notes, "Special Notes"
-				= f.text_area :special_notes, :class => "form-control", :placeholder => "Presence of internal pins, wires, artificial joints, special equipment..."
+				= f.label :injuries, "Injuries", class: 'nobottommargin'
+				%p.nobottommargin (Discribe any relevant injuries including dates)
+				= f.text_area :injuries, :class => "form-control"
 				%br
 				= f.label :mental_condition_note, "Mental Conditions"
-				= f.text_field :mental_condition_note, :class => "form-control", :placeholder => "Discribe any mental conditions you might have."
-
-		= f.submit "Save"
+				= f.text_field :mental_condition_note, :class => "form-control"
+				%br
+				= f.label :other_medical_conditions, "Other Medical Conditions", class: 'nobottommargin'
+				%p.nobottommargin (e.g. digestive conditions, gynaecological conditions, hemophilia, etc.)
+				= f.text_area :other_medical_conditions, :class => "form-control"
+				%br
+				= f.label :special_notes, "Special Notes", class: 'nobottommargin'
+				%p.nobottommargin (presence of internal pins, wires, artificial joints, special equipment)
+				= f.text_area :special_notes, :class => "form-control"
+		
+		= f.submit "Save form and notify Jeremy", class: "btn btn-danger"
