--- a/app/views/hh_forms/show.html.haml
+++ b/app/views/hh_forms/show.html.haml
@@ -6,18 +6,13 @@
 	.row
 		.col_one_third.testimonial
 			%h4 Personal Informaton
-			- @hhform.attributes.each do |title, data|
-				- if field_has_data(title, data, @hhform[:pregnant])
-					%strong= title.humanize + ":"
-					= data
-					%br
-				-if title == 'date_of_birth'
-					- break
+			- hh_form_fields(@hhform, "personal_info").each do |title, data|
+				%strong= title.humanize + ":"
+				= data
+				%br
+
 		.col_one_third.testimonial
-			- past_dob = false
-			- @hhform.attributes.each do |title, data|
-				- past_dob = true if title == 'occupation'
-				- if field_has_data(title, data, @hhform[:pregnant]) && past_dob == true
-					%strong= title.humanize + ":"
-					= data
-					%br
+			- hh_form_fields(@hhform, "personal_info").each do |title, data|
+				%strong= title.humanize + ":"
+				= data
+				%br
