hh_forms#preview

--- a/app/views/hh_forms/new.html.haml
+++ b/app/views/hh_forms/new.html.haml
@@ -273,4 +273,4 @@
 				%p.nobottommargin (presence of internal pins, wires, artificial joints, special equipment)
 				= f.text_area :special_notes, :class => "form-control"
 		
-		= f.submit "Save form and notify Jeremy", class: "btn btn-danger"
+		= f.submit "Save and Continue", class: "btn btn-danger"
